@@ -1,8 +1,8 @@
 Package: MultiRankSeq
 Type: Package
 Title: MultiRankSeq
-Version: 1.2.3
-Date: 2014-11-06
+Version: 1.2.5
+Date: 2015-08-05
 Author: Shilin Zhao, Yan Guo, Shyr Yu
 Maintainer: Shilin Zhao <shilin.zhao@vanderbilt.edu>
 Description: MultiRankSeq package provides a rank sum approach using multiple
