@@ -29,7 +29,8 @@ NULL
 ##' @param seed the random seed for bayseq. The user can set it so that the bayseq result can be reproduced.
 ##' @param diffResult The result generated by \code{\link{findDiff}} function. If not specified, findDiff function will be used to generate it.
 ##' @param exportCounts Logical. Indicate if the raw counts will be exported in result table.
-##' @param useVStCount Logical.The DESeq2 package can apply a variance stabilizing transformation (VST) to count data, which can be used in checking outliers or clustering. This parameter indicates if the transformed counts will be used in heatmap, boxplot, and correlation in reports.
+##' @param useVStCount Logical. The DESeq2 package can apply a variance stabilizing transformation (VST) to count data, which can be used in checking outliers or clustering. This parameter indicates if the transformed counts will be used in heatmap, boxplot, and correlation in reports.
+##' @param useAllInHeatmap Logical. 
 ##' @param percent The percent of genes with highest SD, to be used in heatmap. 
 ##' @param ... Other parameters used in \code{\link{diffReport}} function.
 ##' @export
@@ -42,12 +43,12 @@ NULL
 ##' #this code may take two minutes, because performing baySeq, DESeq2, and edgeR may be slow. 
 ##' result<-MultiRankSeqReport(output="MultiRankSeq2.html",rawCounts=exampleCounts,group=c(0,0,0,1,1,1),paired=c(1:3,1:3)
 ##' }
-MultiRankSeqReport<-function(output="MultiRankSeq.html",rawCounts,group=c(0,0,0,1,1,1),diffResult,seed=NULL,paired=NULL,exportCounts=F,useVStCount=T,percent=0.05,...) {
+MultiRankSeqReport<-function(output="MultiRankSeq.html",rawCounts,group=c(0,0,0,1,1,1),diffResult,seed=NULL,paired=NULL,exportCounts=F,useVStCount=T,useAllInHeatmap=F,percent=0.05,...) {
 	rawCounts<-rawCounts[which(rowSums(rawCounts)>0),]
 	if (missing(diffResult)) {
 		diffResult<-findDiff(rawCounts=rawCounts,group=group,paired=paired,seed=seed)
 	}
-	diffReport(output=output,diffResult=diffResult,rawCounts=rawCounts,group=group,paired=paired,exportCounts=exportCounts,useVStCount=useVStCount,percent=percent,...)
+	diffReport(output=output,diffResult=diffResult,rawCounts=rawCounts,group=group,paired=paired,exportCounts=exportCounts,useVStCount=useVStCount,useAllInHeatmap=useAllInHeatmap,percent=percent,...)
 	return(diffResult)
 }
 
@@ -100,7 +101,7 @@ findDiff<-function(rawCounts,group=c(rep(0,ncol(rawCounts)/2),rep(1,ncol(rawCoun
 ##' @examples data(exampleCounts)
 ##' data(exampleCountsDiff)
 ##' diffReport(output="MultiRankSeq.html",diffResult=exampleCountsDiff,rawCounts=exampleCounts)
-diffReport<-function(input=system.file("extdata", "report.Rhtml", package = "MultiRankSeq"),output,diffResult,rawCounts,group=c(0,0,0,1,1,1),paired=NULL,exportCounts=F,useVStCount=T,percent=0.05) {
+diffReport<-function(input=system.file("extdata", "report.Rhtml", package = "MultiRankSeq"),output,diffResult,rawCounts,group=c(0,0,0,1,1,1),paired=NULL,exportCounts=F,useVStCount=T,useAllInHeatmap=F,percent=0.05) {
 #	require(knitr)
 #	require(VennDiagram)
 	outputWd<-dirname(output)
@@ -225,6 +226,7 @@ myedgeR2<-function(count, group,paired=NULL){
 }
 
 combined_result2<-function(DESeq,edgeR,bayseq,rawCount,comparGroups=c(0,0,0,1,1,1),rankMethod1=1) {
+	DESeq<-as.data.frame(DESeq)
 	temp<-row.names(DESeq)
 	temp1<-apply(rawCount,1,function(x) log2(mean(x[which(comparGroups==1)])/mean(x[which(comparGroups==0)])))
 	temp1<-temp1[temp]
