@@ -5,7 +5,8 @@
 \usage{
 diffReport(input = system.file("extdata", "report.Rhtml", package =
   "MultiRankSeq"), output, diffResult, rawCounts, group = c(0, 0, 0, 1, 1, 1),
-  paired = NULL, exportCounts = F, useVStCount = T, percent = 0.05)
+  paired = NULL, exportCounts = F, useVStCount = T, useAllInHeatmap = F,
+  percent = 0.05)
 }
 \arguments{
 \item{input}{The templet file. You don't need to specify it in most cases. A file in MultiRankSeq package will be used.}
@@ -22,7 +23,9 @@ diffReport(input = system.file("extdata", "report.Rhtml", package =
 
 \item{exportCounts}{Logical. Indicate if the raw counts will be exported in result table.}
 
-\item{useVStCount}{Logical.The DESeq2 package can apply a variance stabilizing transformation (VST) to count data, which can be used in checking outliers or clustering. This parameter indicates if the transformed counts will be used in heatmap, boxplot, and correlation in reports.}
+\item{useVStCount}{Logical. The DESeq2 package can apply a variance stabilizing transformation (VST) to count data, which can be used in checking outliers or clustering. This parameter indicates if the transformed counts will be used in heatmap, boxplot, and correlation in reports.}
+
+\item{useAllInHeatmap}{Logical.}
 
 \item{percent}{The percent of genes with highest SD, to be used in heatmap.}
 }
